Changed app name slightly

--- a/app/QRSAAuthentication/app/src/main/res/values/strings.xml
+++ b/app/QRSAAuthentication/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">QRSA Authentication</string>
+    <string name="app_name">QRSA OTP Authentication</string>
     <string name="ok">OK</string>
 </resources>
